--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<footer>
 			<div class="footer__left">
 				<a href="/">Mask</a>
-				<a href="/example2.html">Venecia</a>
-				<a href="/example3.html">Samurai</a>
-				<a href="/example4.html">Cyborg</a>
+				<a href="/example2">Venecia</a>
+				<a href="/example3">Samurai</a>
+				<a href="/example4">Cyborg</a>
 			</div>
 			<div class="footer__right">
 				<a href="">ARTICLE</a>
