--- a/example4.html
+++ b/example4.html
@@ -18,10 +18,10 @@
 		</div>
 		<footer>
 			<div class="footer__left">
-				<a href="/">Mask</a>
-				<a href="/example2">Venecia</a>
-				<a href="/example3">Samurai</a>
-				<a href="/example4">Cyborg</a>
+				<a href="/codrops-dreamy-particles">Mask</a>
+				<a href="/codrops-dreamy-particles/example2">Venecia</a>
+				<a href="/codrops-dreamy-particles/example3">Samurai</a>
+				<a href="/codrops-dreamy-particles/example4">Cyborg</a>
 			</div>
 			<div class="footer__right">
 				<a href="">ARTICLE</a>
