--- a/example3.html
+++ b/example3.html
@@ -2,32 +2,37 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<link rel="icon" type="image/svg+xml" href="/vite.svg"/>
-		<link rel="stylesheet" href="style.css"/>
+		<link rel="shortcut icon" href="./favicon.ico">
+		<link rel="stylesheet" href="./style.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<title>GPGPU Shining Mask</title>
+		<title>GPGPU Shining Mask - Samurai</title>
+		<script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
 	</head>
 	<body>
-		<header>
-			<div class="header__left">
-				<p>DREAMY PARTICLES BY <a href="#">DOMINIK FOJCIK</a></p>
-			</div>
+		<header class="frame">
+			<h1 class="frame__title">Dreamy Particles by <a href="https://fojcikdominik.com/" target="_blank">Dominik Fojcik</a></h1> 
+			<nav class="frame__links">
+				<a href="https://tympanus.net/codrops/?p=83785">Article</a>
+				<a href="https://tympanus.net/codrops/demos/">All demos</a>
+				<a href="https://github.com/DGFX/codrops-dreamy-particles">GitHub</a>
+			</nav>
+			<nav class="frame__demos">
+				<span>Variations:</span>
+				<a href="./index.html">Mask</a>
+				<a href="./example2.html">Venecia</span>
+				<span>Samurai</span>
+				<a href="./example4.html">Cyborg</a>
+			</nav>
+			<nav class="frame__tags">
+				<a href="https://tympanus.net/codrops/demos/?tag=three-js">Three.js</a>
+				<a href="https://tympanus.net/codrops/demos/?tag=webgl">WebGL</a>
+				<a href="https://tympanus.net/codrops/demos/?tag=3d">3D</a>
+			</nav>
 		</header>
 		<div class="experience">
 			<canvas class="experience__canvas"></canvas>
 		</div>
-		<footer>
-			<div class="footer__left">
-				<a href="/codrops-dreamy-particles/">Mask</a>
-				<a href="/codrops-dreamy-particles/example2">Venecia</a>
-				<a href="/codrops-dreamy-particles/example3">Samurai</a>
-				<a href="/codrops-dreamy-particles/example4">Cyborg</a>
-			</div>
-			<div class="footer__right">
-				<a href="">ARTICLE</a>
-				<a href="">GITHUB</a>
-			</div>
-		</footer>
-		<script type="module" src="/webgl/Samurai.js"></script>
+		<script type="module" src="./webgl/Samurai.js"></script>
+		<script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script>
 	</body>
 </html>
