--- a/example3.html
+++ b/example3.html
@@ -8,9 +8,11 @@
 		<title>GPGPU Shining Mask - Samurai</title>
 		<script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
 	</head>
-	<body>
+	<body class="is-loading">
 		<header class="frame">
-			<h1 class="frame__title">Dreamy Particles by <a href="https://fojcikdominik.com/" target="_blank">Dominik Fojcik</a></h1> 
+			<h1 class="frame__title">Dreamy Particles by&nbsp;
+				<a href="https://fojcikdominik.com/" target="_blank">Dominik Fojcik</a>
+			</h1>
 			<nav class="frame__links">
 				<a href="https://tympanus.net/codrops/?p=83785">Article</a>
 				<a href="https://tympanus.net/codrops/demos/">All demos</a>
@@ -18,8 +20,8 @@
 			</nav>
 			<nav class="frame__demos">
 				<span>Variations:</span>
-				<a href="./index.html">Mask</a>
-				<a href="./example2.html">Venecia</span>
+				<a href="./index.html">Leader</a>
+				<a href="./example2.html">Venecia</a>
 				<span>Samurai</span>
 				<a href="./example4.html">Cyborg</a>
 			</nav>
@@ -32,6 +34,7 @@
 		<div class="experience">
 			<canvas class="experience__canvas"></canvas>
 		</div>
+		<div class="loading"></div>
 		<script type="module" src="./webgl/Samurai.js"></script>
 		<script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script>
 	</body>
