--- a/index.html
+++ b/index.html
@@ -10,25 +10,12 @@
 	</head>
 	<body class="is-loading">
 		<header class="frame">
-			<h1 class="frame__title">Dreamy Particles by&nbsp;
-				<a href="https://fojcikdominik.com/" target="_blank">Dominik Fojcik</a>
+			<h1 class="frame__title">Lifetime Mistress Slave 
 			</h1>
-			<nav class="frame__links">
-				<a href="https://tympanus.net/codrops/?p=83785">Article</a>
-				<a href="https://tympanus.net/codrops/demos/">All demos</a>
-				<a href="https://github.com/DGFX/codrops-dreamy-particles">GitHub</a>
-			</nav>
 			<nav class="frame__demos">
-				<span>Variations:</span>
-				<span>Leader</span>
-				<a href="./example2.html">Venecia</a>
-				<a href="./example3.html">Samurai</a>
-				<a href="./example4.html">Cyborg</a>
-			</nav>
-			<nav class="frame__tags">
-				<a href="https://tympanus.net/codrops/demos/?tag=three-js">Three.js</a>
-				<a href="https://tympanus.net/codrops/demos/?tag=webgl">WebGL</a>
-				<a href="https://tympanus.net/codrops/demos/?tag=3d">3D</a>
+				<span>主奴面具:</span>
+				<span>终身奴球球</span>
+				<a href="./example2.html">至尊终身圣母主</a>
 			</nav>
 		</header>
 		<div class="experience">
