--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 	</head>
 	<body class="is-loading">
 		<header class="frame">
-			<h1 class="frame__title">Lifetime Mistress Slave 
+			<h1 class="frame__title">Lifetime Mistress Slave <br /> <br />
+				<div>球球已经突破项目：菊花扩张 菊花长时间震动 电击项圈 乳夹 舔鞋面</div>
+				<br /> 
+				<div>圣母主要求的待突破项目：舔鞋底 </div>
 			</h1>
 			<nav class="frame__demos">
 				<span>主奴面具:</span>
